<resources>
    <string name="app_name">GroupTwo</string>
    <string name="texto_dificultad">Dificultad</string>
    <string name="texto_sabor">Sabor</string>
    <string name="texto_nivel">Nivel</string>
    <string name="ver_video">▶ Ver Video Corto</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="preparacion">Preparación</string>
    <string name="inicio">Inicio</string>
    <string name="boton_para_regresar">Boton para regresar a la pantalla anterior</string>
    <string name="boton_inicio">Boton de inicio, lleva a la pantalla inicial</string>
    <string name="buscar">Buscar</string>
    <string name="boton_buscar">Boton que lleva a la pantalla de buscar</string>
    <string name="boton_calculadora">Boton que lleva a la pantalla de calculadora</string>
    <string name="calculadora">Calculadora</string>
    <string name="boton_perfil">Boton que lleva a la pantalla de perfil</string>
    <string name="perfil">Perfil</string>

    <string name="cd_back">Regresar</string>
    <string name="cd_save">Guardar receta</string>
    <string name="crear_coctel_title">Crear Cóctel</string>
    <string name="guardar">Guardar</string>
    <string name="agregar_mas">+ Agregar</string>
    <string name="nombre_coctel_oblig">Nombre del cóctel *</string>
    <string name="descripcion">Descripción</string>
    <string name="categoria_oblig">Categoría *</string>
    <string name="perfil_sabor">Perfil de sabor</string>
    <string name="tiempo_preparacion">Tiempo de preparación</string>
    <string name="ingredientes_oblig">Ingredientes *</string>
    <string name="pasos_oblig">Pasos de preparación *</string>
    <string name="hint_nombre_ej">Ej: Sunset Paradise</string>
    <string name="hint_desc_ej">Ej: Refrescante, Sofisticado, Tropical...</string>
    <string name="hint_tiempo">Ej: 5 min, 10 min...</string>
    <string name="msg_completa_campos">Completa ambos campos</string>
    <string name="msg_describe_paso">Describe el paso</string>
    <string name="msg_nombre_oblig">Nombre obligatorio</string>
    <string name="msg_categoria_oblig">Selecciona una categoría</string>
    <string name="msg_ingrediente_oblig">Agrega al menos 1 ingrediente</string>
    <string name="msg_paso_oblig">Agrega al menos 1 paso</string>
    <string name="msg_guardado_exito">Receta creada</string>
    <string name="regresar_descripcion">"Regresar "</string>
    <string name="lo_que_tengo_en_casa_boton">"Lo que tengo en casa "</string>
    <string name="agrega_tus_ingredientes_disponibles">Agrega tus ingredientes disponibles</string>
    <string name="buscar_ingrediente">Buscar ingrediente...</string>
    <string name="ingredientes_seleccionados">Ingredientes seleccionados:</string>
    <string name="ver_qu_puedo_preparar">Ver qué puedo preparar</string>
    <string name="resultados">Resultados</string>
    <string name="ingredientes_comunes">Ingredientes comunes</string>
    <string name="alcoholes">Alcoholes</string>
    <string name="ron">Ron</string>
    <string name="vodka">Vodka</string>
    <string name="gin">Gin</string>
    <string name="tequila">Tequila</string>
    <string name="whisky">Whisky</string>
    <string name="cointreau">Cointreau</string>
    <string name="vermut">Vermut</string>
    <string name="triple_sec">Triple Sec</string>
    <string name="campari">Campari</string>
    <string name="licor_de_caf">Licor de café</string>
    <string name="frutas_c_tricos">Frutas / Cítricos</string>
    <string name="lima">Lima</string>
    <string name="lim_n">Limón</string>
    <string name="naranja">Naranja</string>
    <string name="pi_a">Piña</string>
    <string name="cereza">Cereza</string>
    <string name="otros">Otros</string>
    <string name="menta">Menta</string>
    <string name="az_car">Azúcar</string>
    <string name="hielo">Hielo</string>
    <string name="jarabe_de_granadina">Jarabe de granadina</string>
    <string name="soda">Soda</string>
    <string name="agua_con_gas">Agua con gas</string>
    <string name="leche">Leche</string>
    <string name="caf">Café</string>
    <string name="crema_de_coco">Crema de coco</string>
    <string name="categor_as">Categorías</string>
    <string name="c_cteles">Cócteles</string>
    <string name="configuraci_n">Configuración</string>
    <string name="personaliza_tu_experiencia">Personaliza tu experiencia</string>
    <string name="cuenta">Cuenta</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="preferencias">Preferencias</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="soporte">Soporte</string>
    <string name="ayuda_y_soporte">Ayuda y Soporte</string>
    <string name="version_1_0_0">Version: 1.0.0</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="crea_tu_cuenta">Crea tu Cuenta</string>
    <string name="correo">Correo</string>
    <string name="password">Password</string>
    <string name="bienvenido">BIENVENIDO!!</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="ya_tengo_cuenta">Ya tengo cuenta</string>
    <string name="nombre_de_usuario">Nombre de Usuario</string>
    <string name="descripci_n">Descripción</string>
    <string name="inicio_de_sesion">Inicio de Sesion</string>
    <string name="acceder">Acceder</string>
    <string name="categorias">Categorias</string>
    <string name="para_ti">Para ti</string>
    <string name="separador_dificultad_nivel">-</string>
    <string name="tendencias">Tendencias</string>
    <string name="foto_de_perfil">Foto de perfil</string>
    <string name="group_two">Group two</string>
    <string name="amante_de_los_c_cteles">Amante de los cócteles 🍹</string>
    <string name="favoritos_preparados">Favoritos / Preparados</string>
    <string name="mis_recetas">Mis Recetas</string>
    <string name="crear_receta">crear receta</string>
    <string name="envia_tu_comentario">Envia tu comentario</string>
    <string name="escribe_tu_comentario">Escribe tu comentario</string>
    <string name="nombre_del_ingrediente">Nombre del ingrediente</string>
    <string name="hint_cantidad">Cantidad (ej: 50 ml, 1 oz)</string>
    <string name="describe_el_paso">Describe el paso</string>
    <string name="cl_sico">Clásico</string>
    <string name="mojito">Mojito</string>
    <string name="_5_bebidas">5 bebidas</string>
    <string name="_5">5</string>
    <string name="eliminar_ingrediente">Eliminar ingrediente</string>
    <string name="_1">1.</string>
    <string name="mezclar_ingredientes">Mezclar ingredientes</string>
    <string name="eliminar_paso">Eliminar paso</string>
    <string name="volver">Volver</string>
    <string name="lista_de_compras">Lista de Compras</string>
    <string name="hint_sabor">sabor</string>
    <string name="regresar">Regresar</string>
    <string name="calculadora_i">Calculadora 🧮</string>
    <string name="calcula_cantidades_para_tu_fiesta">Calcula cantidades para tu fiesta</string>
    <string name="personas_i">👥</string>
    <string name="n_mero_de_invitados">Número de invitados</string>
    <string name="_10">10</string>
    <string name="c_cteles_seleccionados">Cócteles seleccionados</string>
    <string name="_0_bebidas">0 bebidas</string>
    <string name="agregar_c_ctel_i">➕ Agregar Cóctel</string>
    <string name="no_hay_c_cteles_seleccionados_npresiona_agregar_c_ctel_para_empezar">No hay cócteles seleccionados\nPresiona \'➕ Agregar Cóctel\' para empezar</string>
    <string name="tablero_i">📋</string>
    <string name="resumen_del_evento">Resumen del evento</string>
    <string name="total_de_invitados">Total de invitados:</string>
    <string name="_10_personas">10 personas</string>
    <string name="total_de_bebidas">Total de bebidas:</string>
    <string name="_0_c_cteles">0 cócteles</string>
    <string name="promedio_por_persona">Promedio por persona:</string>
    <string name="_0_0_bebidas">0.0 bebidas</string>
    <string name="ver_lista_de_compras_i">🛒 Ver lista de compras</string>
</resources>