<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:background="?attr/selectableItemBackground"
    android:gravity="top">

    <TextView
        android:id="@+id/txtIndice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/blanco"
        android:layout_marginEnd="8dp"
        android:minWidth="30dp" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/mezclar_ingredientes"
        android:textSize="14sp"
        android:textColor="@color/blanco" />

    <ImageButton
        android:id="@+id/btnEliminarPaso"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@android:drawable/ic_menu_delete"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/eliminar_paso"
        app:tint="@color/blanco" />

</LinearLayout>